[tool.poetry]
name = "learnupon"
version = "0.2.0"
description = ""
authors = ["Michael Butler <michael.butler@swimlane.com>"]
readme = "README.md"
repository = "https://github.com/swimlane/swimlane-learnupon"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
