[tool.poetry]
name = "learnupon"
version = "0.2.0"
description = ""
authors = ["Michael Butler <michael.butler@swimlane.com>", "Kyle Burk <kyle.burk@archerirm.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
backoff = "^2.0.1"
uuid = "^1.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
